--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -2,5 +2,9 @@
 @import "lib/vars";
 @import "lib/layout";
 @import "lib/header";
+@import "lib/main-menu";
+@import "lib/content";
 @import "lib/footer";
+@import "lib/footer-menu";
 @import "lib/views";
+@import "lib/pager";
