--- a/app/styles/lib/views.scss
+++ b/app/styles/lib/views.scss
@@ -4,7 +4,22 @@
     width: 100%;
 
     > .views-row {
-      width: 25%;
+      width: percentage(1 / 4);
+      padding: 12px;
+      float: left;
+      display: inline-block;
+      position: relative;
+    }
+  }
+}
+
+.view-products {
+  > .view-content {
+    margin: 0 -12px;
+    width: 100%;
+
+    > .views-row {
+      width: percentage(1 / 3);
       padding: 12px;
       float: left;
       display: inline-block;
