--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -1,5 +1,6 @@
 @import "lib/drupal";
 @import "lib/vars";
+@import "lib/typography";
 @import "lib/layout";
 @import "lib/header";
 @import "lib/main-menu";
