--- a/app/styles/lib/content.scss
+++ b/app/styles/lib/content.scss
@@ -25,7 +25,7 @@
 			position:relative;
 	    	width: percentage(1 / 3);
 		    cursor: pointer;
-	    	> img {
+	    	img {
 	    		display: block;
 	    		float: left;
 	    	}
