--- a/app/styles/lib/header.scss
+++ b/app/styles/lib/header.scss
@@ -11,7 +11,7 @@
   .site-name {
     display: table-cell;
     vertical-align: middle;
-    font-size: 32px;
+    font-size: 2rem;
     padding-left: $gutter / 2;
   }
 }
