--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -1,8 +1,9 @@
-@import "lib/drupal";
 @import "lib/vars";
+@import "lib/drupal";
 @import "lib/typography";
 @import "lib/layout";
 @import "lib/header";
+@import "lib/promo";
 @import "lib/main-menu";
 @import "lib/content";
 @import "lib/footer";
