--- a/app/styles/lib/content.scss
+++ b/app/styles/lib/content.scss
@@ -1,3 +1,8 @@
+a, a:hover, li a.active-trail, li a.active {
+  color: $textColor;
+  text-decoration: none;
+}
+
 #node-46 {
   .field-name-body {
     float: left;
@@ -48,17 +53,16 @@
 	    	&:before {
 			    content: "\f00e";
 			    font-family: "FontAwesome";
-			    font-size: 4em;
+			    font-size: 4rem;
 			    width:100%;
 			    color:#fff;
 			    z-index:1;
 			    top: 50%;
 			    transform: translateY(-50%);
-			    padding:4px 10px;
 			    text-align:center;
 	    	}
 			&:hover:after, &:hover:before {
-				opacity:1;				
+				opacity:1;
 			}
 		}
 	}
