--- a/app/styles/lib/layout.scss
+++ b/app/styles/lib/layout.scss
@@ -3,18 +3,13 @@
 }
 
 html {
-  color: #f0f0f0;
+  color: $textColor;
   height: 100%;
 }
 
 body {
    height: 100%;
    overflow-y:scroll;
-}
-
-a, a:hover {
-  color: #f0f0f0;
-  text-decoration: none;
 }
 
 .page-wrap {
@@ -28,6 +23,17 @@ a, a:hover {
   background: linear-gradient(to bottom,#2d2d2d 0%,#1e1e1e 100%);
 
   > .l-header-inner {
+    width: 1240px;
+    margin: 0 auto;
+    padding: 0 40px;
+  }
+}
+
+.l-navigation {
+  width: 100%;
+  padding: 0;
+
+  > nav {
     width: 1240px;
     margin: 0 auto;
     padding: 0 40px;
