--- a/app/styles/lib/typography.scss
+++ b/app/styles/lib/typography.scss
@@ -36,8 +36,6 @@ $h4-margin-bottom: 1 * $h4-line;
 
 html {
   font-size: 1em;
-  line-height: 1.5em;
-
 }
 
 body {
@@ -45,26 +43,14 @@ body {
   line-height: $base-line-height;
 }
 h1 {
-  font-size: $h1-font-size;
-  line-height: $h1-line-height;
-  margin-top: $h1-margin-top;
-  margin-bottom: $h1-margin-bottom;
+  @include h-rhythm($h1-font-size, $h1-line-height, $h1-margin-top, $h1-margin-bottom);
 }
 h2 {
-  font-size: $h2-font-size;
-  line-height: $h2-line-height;
-  margin-top: $h2-margin-top;
-  margin-bottom: $h2-margin-bottom;
+  @include h-rhythm($h2-font-size, $h2-line-height, $h2-margin-top, $h2-margin-bottom);
 }
 h3 {
-  font-size: $h3-font-size;
-  line-height: $h3-line-height;
-  margin-top: $h3-margin-top;
-  margin-bottom: $h3-margin-bottom;
+  @include h-rhythm($h3-font-size, $h3-line-height, $h3-margin-top, $h3-margin-bottom);
 }
-h4 {
-  font-size: $h4-font-size;
-  line-height: $h4-line-height;
-  margin-top: $h4-margin-top;
-  margin-bottom: $h4-margin-bottom;
+h4, h5, h6 {
+  @include h-rhythm($h4-font-size, $h4-line-height, $h4-margin-top, $h4-margin-bottom);
 }
