--- a/app/styles/lib/views.scss
+++ b/app/styles/lib/views.scss
@@ -1,40 +1,17 @@
 .view-promote {
-  > .view-content {
-    margin: 0 -12px;
-    width: 100%;
-
-    > .views-row {
-      width: percentage(1 / 4);
-      padding: 12px;
-      float: left;
-      display: inline-block;
-      position: relative;
-      > .views-field-title {
-        text-align: center;
-      }
-    }
+  @include view-grid(4);
+  .views-field-title {
+    text-align: center;
   }
 }
 
 .view-products {
-  > .view-content {
-    margin: 0 -12px;
-    width: 100%;
-
-    > .views-row {
-      width: percentage(1 / 3);
-      padding: 12px;
-      float: left;
-      display: inline-block;
-      position: relative;
-    }
-  }
+  @include view-grid(3);
 }
 
 .view-ra-news {
   .views-field-title {
-    font-size: 1.5em;
-    line-height: 2em;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
-
 }
