--- a/app/styles/lib/layout.scss
+++ b/app/styles/lib/layout.scss
@@ -14,7 +14,9 @@ body {
 
 .page-wrap {
   min-height: 100%;
+  background: #141414;
   background: linear-gradient(to bottom,#141414 0%,#202020 100%);
+
 }
 
 .l-header {
