--- a/app/styles/contrib/idangerous.swiper.scss
+++ b/app/styles/contrib/idangerous.swiper.scss
@@ -13,65 +13,31 @@
  * Released on: August 30, 2014
 */
 /* ===============================================================
-Basic Swiper Styles 
+Basic Swiper Styles
 ================================================================*/
-.swiper-container {
+.view-slider {
 	margin:0 auto;
 	position:relative;
 	overflow:hidden;
-	-webkit-backface-visibility:hidden;
-	-moz-backface-visibility:hidden;
-	-ms-backface-visibility:hidden;
-	-o-backface-visibility:hidden;
 	backface-visibility:hidden;
 	/* Fix of Webkit flickering */
 	z-index:1;
 }
-.swiper-wrapper {
+.view-slider .view-content {
 	position:relative;
 	width:100%;
-	-webkit-transition-property:-webkit-transform, left, top;
-	-webkit-transition-duration:0s;
-	-webkit-transform:translate3d(0px,0,0);
-	-webkit-transition-timing-function:ease;
-	
-	-moz-transition-property:-moz-transform, left, top;
-	-moz-transition-duration:0s;
-	-moz-transform:translate3d(0px,0,0);
-	-moz-transition-timing-function:ease;
-	
-	-o-transition-property:-o-transform, left, top;
-	-o-transition-duration:0s;
-	-o-transform:translate3d(0px,0,0);
-	-o-transition-timing-function:ease;
-	-o-transform:translate(0px,0px);
-	
-	-ms-transition-property:-ms-transform, left, top;
-	-ms-transition-duration:0s;
-	-ms-transform:translate3d(0px,0,0);
-	-ms-transition-timing-function:ease;
-	
 	transition-property:transform, left, top;
 	transition-duration:0s;
 	transform:translate3d(0px,0,0);
 	transition-timing-function:ease;
-
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
 	box-sizing: content-box;
 }
 .swiper-free-mode > .swiper-wrapper {
-	-webkit-transition-timing-function: ease-out;
-	-moz-transition-timing-function: ease-out;
-	-ms-transition-timing-function: ease-out;
-	-o-transition-timing-function: ease-out;
 	transition-timing-function: ease-out;
 	margin: 0 auto;
 }
 .swiper-slide {
 	float: left;
-	-webkit-box-sizing: content-box;
-	-moz-box-sizing: content-box;
 	box-sizing: content-box;
 }
 
@@ -87,38 +53,88 @@ Basic Swiper Styles
 Your custom styles, here you need to specify container's and slide's
 sizes, pagination, etc.
 ================================================================*/
-.swiper-container {
+.view-slider {
 	/* Specify Swiper's Size: */
-
-	/*width:200px;
-	height: 100px;*/
+	width:100%;
 }
 .swiper-slide {
 	/* Specify Slides's Size: */
-	
+
 	/*width: 100%;
 	height: 100%;*/
 }
 .swiper-slide-active {
 	/* Specific active slide styling: */
-	
+
 }
 .swiper-slide-visible {
-	/* Specific visible slide styling: */	
+	/* Specific visible slide styling: */
 
 }
 /* ===============================================================
 Pagination Styles
 ================================================================*/
-.swiper-pagination-switch {
-	/* Stylize pagination button: */	
+.pagination {
+  position: absolute;
+  padding: $gutter / 2;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(10,10,10,0.6);
+  bottom: 0;
+  z-index: 2;
+}
 
+.swiper-pagination-switch {
+	/* Stylize pagination button: */
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background: #ccc;
+  cursor: pointer;
+  margin: $gutter / 8;
 }
 .swiper-active-switch {
-	/* Specific active button style: */	
-	
+	/* Specific active button style: */
+  background: #fff;
 }
 .swiper-visible-switch {
-	/* Specific visible button style: */	
-	
+	/* Specific visible button style: */
+
+}
+
+.view-slider .arrow-left {
+	position:absolute;
+	left:0;
+	top:50%;
+	transform: translateY(-50%);
+  color:#ddd;
+  &:hover {
+  	color: #fff;
+  }
+	&:before {
+    content: "\f104";
+    font-family: "FontAwesome";
+    font-size: 4rem;
+    padding: $gutter / 2;
+  background: rgba(10,10,10,0.6);
+	}
+}
+
+.view-slider .arrow-right {
+	position:absolute;
+	right: 0;
+	top:50%;
+	transform: translateY(-50%);
+  color:#ddd;
+  &:hover {
+  	color: #fff;
+  }
+	&:before {
+    content: "\f105";
+    font-family: "FontAwesome";
+    font-size: 4rem;
+    padding: $gutter / 2;
+  background: rgba(10,10,10,0.6);
+	}
 }
