--- a/app/styles/lib/views.scss
+++ b/app/styles/lib/views.scss
@@ -15,3 +15,24 @@
     line-height: 2rem;
   }
 }
+
+.view-slider {
+  height: 650px;
+  img {
+    float: left;
+    display: block;
+    height:650px;
+  }
+  .views-field-title {
+    transform: translateY(-20%);
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    > span > a {
+      padding: $gutter;
+      background: rgba(10,10,10,0.6);
+      margin-left: $gutter;
+      font-size: 2rem;
+    }
+  }
+}
