--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -10,4 +10,5 @@
 @import "lib/footer-menu";
 @import "lib/views";
 @import "lib/pager";
+@import "lib/forms";
 @import "contrib/idangerous.swiper";
