--- a/app/styles/lib/drupal.scss
+++ b/app/styles/lib/drupal.scss
@@ -1,3 +1,11 @@
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
 @mixin h-rhythm($font-size, $line-height, $margin-top, $margin-bottom) {
   font-size: $font-size;
   line-height: $line-height;
@@ -20,7 +28,7 @@
   }
 }
 
-@mixin shadow-7() {
+@mixin shadow-7 {
   position:relative;
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   &:before, &:after
